--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Cradle n' All</title>
 
-  <link rel="stylesheet" type="text/css" href="styles.css" >
+  
 		<link href='https://fonts.googleapis.com/css?family=Sansita|PT+Serif|Roboto' rel='stylesheet'> 
 
   <meta charset="utf-8">
@@ -11,11 +11,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="styles.css" >
 </head>
 <body>
 
-	<nav class="navbar navbar-expand-md bg-white navbar-white">
+	<nav class="navbar navbar-expand-md">
 	  <!-- Brand -->
 	  <a class="navbar-brand" href="#">
 	  	<img src="Images/Logo_Sample.jpg" alt="Logo" style="width:50px;">
@@ -30,15 +31,13 @@
 	  <div class="collapse navbar-collapse" id="collapsibleNavbar">
 	    <ul class="navbar-nav">
 	      <li class="nav-item">
-	        <a class="nav-link" href="page1.html">Login</a>
-	      </li>
+					<a class="nav-link" href="page1.html">Login</a>
+				</li>
 	      <li class="nav-item">
 	        <a class="nav-link" href="page2.html">Shop</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="page3.html">Support</a>
-	        <li class="nav-item">
-	        <a class="nav-link" href="contact.html">Contact Us</a>
+	        <a class="nav-link" href="contact.html">Support/Contact Us</a>
 	      </li> 
 	      <li class="nav-item">
 	        <a class="nav-link" href="page3.html">Welcome back, Eric</a>
@@ -52,13 +51,8 @@
 	</nav>
   
 <!-- Jumbotron -->
-<div>
-
- 	<img src="Images/Baby_Sleeping.jpg" style="width:100%;">
-	  </a>
 	  <p><h1>Cradle n' All</h1><h5>The best site for a restful night.</h5></p>
-	
-</div>
+
 
 <!-- two-column layout -->
 <div class="container-fluid">
